...
                android:singleLine="true"
                android:paddingEnd="@dimen/toolbar_edge_padding"
                android:textSize="@dimen/location_bar_url_text_size" />
        </FrameLayout>
    </FrameLayout>
    <ImageButton
        android:id="@+id/action_button"
        style="@style/ToolbarButton"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/custom_tabs_toolbar_maxWidth"
        android:paddingTop="@dimen/custom_tabs_toolbar_vertical_padding"
        android:paddingBottom="@dimen/custom_tabs_toolbar_vertical_padding"
        android:adjustViewBounds="true"
...
