...
    <org.chromium.components.browser_ui.widget.CoordinatorLayoutForPointer
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

       <include layout="@layout/compositor_view_holder"/>

       <FrameLayout
            android:id="@+id/overview_list_layout_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
...
